--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.101  2006/05/29 19:00:01  andy
+Release as 0.20rc3.
+
 Revision 1.100  2006/05/29 14:44:35  zeus
 bugfix in aggregation mode delta section.
 
@@ -408,3 +411,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
