--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.103  2006/05/30 18:37:11  andy
+Remove extension usage when file set is given.
+
 Revision 1.102  2006/05/30 06:27:31  andy
 Remove deprecated code.
 
@@ -414,3 +417,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
