--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.107  2006/05/31 21:08:23  zeus
+XMP-RenRot namespace was added (tags RenRot_ProcessingTimestamp, RenRot_Version and RenRot_URL).
+README and POD a bit polished.
+
 Revision 1.106  2006/05/31 10:52:23  zeus
 Description of --counter-fixed-field, --counter-start and --counter-step added to the usage() and POD.
 
@@ -434,3 +438,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
