--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+* 0.20 *
+
+The deprecated options (--aggr, --aggr-dumb, 'delta' keyword in the
+--aggr-template) and their configuration variables was removed. The old
+style of the configuration file is not supported. A extension is no more
+used for the file set. A new trim variable has been added to the
+configuration file (--trim represents it in the command line). Script
+writes its own XMP tags to the RenRot called group. The default
+aggregation directory value has been changed, and the dot delimeter is
+added to the directory name before a counter. The documentation has been
+expanded according to the last changes.
+
+
 * 0.20rc3 *
 
 The --aggr-dumb option and related configuration variable are deprecated (use
