--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.111  2006/06/01 22:17:59  zeus
+exifWriter() idealogy a bit changed.
+rotateImg() a bit tunned.
+
 Revision 1.110  2006/06/01 13:12:03  zeus
 EXIF data copying code rewritten. Now $exiftool->SetNewValuesFromFile()
 is used rather than jpegtran -copy all
@@ -450,3 +454,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
