--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.112  2006/06/02 13:06:02  andy
+Update ExifTool requirement due to new implementation of WriteInfo().
+
 Revision 1.111  2006/06/01 22:17:59  zeus
 exifWriter() idealogy a bit changed.
 rotateImg() a bit tunned.
@@ -454,4 +457,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
