Fix spec according Fedora Extras Review. First part of tags filling implementation.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@170 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.113  2006/06/03 15:25:03  andy
+Fix spec according Fedora Extras Review.
+First part of tags filling implementation.
+
 Revision 1.112  2006/06/02 13:06:02  andy
 Update ExifTool requirement due to new implementation of WriteInfo().
 
@@ -457,3 +461,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
