--- a/NEWS
+++ b/NEWS
@@ -2,10 +2,10 @@
 
 A new tag parser and option style are represented in this version (the old
 style of the tag prefixed options still works, but is deprecated). The EXIF
-data for a rotated file is rewritten (used ExifTool rather than jpegtran).
-The ExifTool requirement was updated due to new implementation of WriteInfo().
-The documentation has been expanded with a new part in README.Windows, BUGS
-and TAGS sections are added to manual.
+data for a rotated file is rewritten (used ExifTool rather than jpegtran). The
+ExifTool requirement was updated due to a new implementation of WriteInfo().
+The documentation has been expanded with a new part in README.Windows, BUGS,
+and TAGS sections have been added to the manual.
 
 
 * 0.20 *
