--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.117  2006/06/05 06:34:31  andy
+Fix logic for empty given tags (now they should be removed from EXIF).
+
 Revision 1.116  2006/06/04 21:02:50  andy
 Implemented new tag parser and option style.
 Make old style of tag prefixed options work, but it deprecated since now.
@@ -477,3 +480,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
