--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.118  2006/06/05 14:23:34  zeus
+POD edited. Detailed section TAGS description added.
+
 Revision 1.117  2006/06/05 06:34:31  andy
 Fix logic for empty given tags (now they should be removed from EXIF).
 
@@ -480,4 +483,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
