TagFile configuration option was added. Any tag could be filled by file content. "comment file" configuration variable are deprecated by new TagFile. Minor changes at TAGS section.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@181 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 $Log$
+Revision 1.120  2006/06/06 08:51:58  andy
+TagFile configuration option was added. Any tag could be filled by file content.
+"comment file" configuration variable are deprecated by new TagFile.
+Minor changes at TAGS section.
+
 Revision 1.119  2006/06/05 21:29:58  andy
 Fix tag configuration option parser (no collision with tagNNN, where NNN - numberF).
 
@@ -486,4 +491,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
