--- a/README
+++ b/README
@@ -176,6 +176,8 @@ Alex Zasypkin for his help with documentation writing.
 
 Fedora Extras Team for including RenRot to its repository.
 
+Vyacheslav Garonin for his idea concerning the virtual aggregation.
+
 
 ARE YOU WANT SOMETHING TO SAY?
 
