--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.124  2006/06/08 06:14:54  andy
+Implement include configuration directive.
+Split configuration file to main and tags.
+
 Revision 1.123  2006/06/07 13:23:54  andy
 relocate configuration to /etc/renrot/.
 
@@ -501,4 +505,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
