--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.125  2006/06/08 06:49:48  andy
+Release as 0.21rc2.
+
 Revision 1.124  2006/06/08 06:14:54  andy
 Implement include configuration directive.
 Split configuration file to main and tags.
@@ -505,3 +508,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
