Fix unusing included files. Add 'include' description to POD.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@199 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.129  2006/06/09 08:21:07  andy
+Fix unusing included files.
+Add 'include' description to POD.
+
 Revision 1.128  2006/06/09 07:44:18  zeus
 TagFile config option added to the POD.
 
@@ -520,3 +524,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
