--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,8 @@
 * 0.21rc3 *
 
-There is bugfix release. The issue where the parsed data of the configuration
-files does not used anymore was fixed. The RESTRICTIONS and BUGS sections are
-expanded by description of the discovered problem on the FreeBSD 6 with perl
-5.8.7/5.8.8.
+The issue where the parsed data of the configuration files was not used was
+fixed. The RESTRICTIONS and BUGS sections have been expanded with the
+description of the discovered problem on FreeBSD 6 with Perl 5.8.7/5.8.8.
 
 
 * 0.21rc2 *
