--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.134  2006/06/12 08:03:01  andy
+Release as 0.21.
+
 Revision 1.133  2006/06/12 07:42:14  andy
 Check for directory tree in aggregation arguments. Now it isn't possible.
 Remove support of old style tag options.
@@ -539,4 +542,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
