--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.135  2006/06/14 20:40:19  zeus
+in renameFile(), $newname look changed on opposite in case of it's existance.
+
 Revision 1.134  2006/06/12 08:03:01  andy
 Release as 0.21.
 
@@ -542,3 +545,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
