Implement --backup option. Small cutting of usage() messages.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@215 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ New template ideology was implemented. It includes flexibility in file name
 construction. In version 0.16 and later the previous behaviour still present
 with default NameTemplate. The template can contain different data, from
 direct name to EXIF data (the date, id or shooting details such as
-WhiteBalance, ISO e.t.c.). For further information, please, see applied
+WhiteBalance, ISO, e.t.c.). For further information, please, see applied
 manual.
 
 RenRot rotates file and its thumbnail, according to EXIF tag Orientation. If
