--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.139  2006/07/05 06:20:54  andy
+Implement --backup option.
+Small cutting of usage() messages.
+
 Revision 1.138  2006/06/26 09:09:20  zeus
 %n and %e template patters've being implemented.
 
@@ -554,3 +558,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
