--- a/TODO
+++ b/TODO
@@ -52,7 +52,7 @@ File naming
 
 +  to add to the template %n - original file name as is
 
-+  to add to the template %e - original extention as is
++  to add to the template %e - original extension as is
 
 q  virtual renaming
 
