--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.140  2006/07/05 11:43:26  andy
+Release as 0.21.1.
+
 Revision 1.139  2006/07/05 06:20:54  andy
 Implement --backup option.
 Small cutting of usage() messages.
@@ -558,4 +561,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
