--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.141  2006/07/07 11:43:25  zeus
+keywordizer() added, managed via CLI and config file
+options --keywordize and --keyword-file.
+
 Revision 1.140  2006/07/05 11:43:26  andy
 Release as 0.21.1.
 
@@ -561,3 +565,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
